<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity4">


    <TextView
        android:id="@+id/textView_horario"
        android:layout_width="331dp"
        android:layout_height="30dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/textView_horario"
        android:textColor="@color/teal_700"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/horario7"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/horario7"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/horario14"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/horario14"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/horario19"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toEndOf="@+id/horario7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/horario19"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/horario19"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_dias"
        android:layout_width="206dp"
        android:layout_height="33dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/textView_dias"
        android:textColor="@color/teal_700"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_lunes"
        android:layout_width="69dp"
        android:layout_height="28dp"
        android:layout_marginTop="168dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/textView_lunes"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_miercoles"
        android:layout_width="122dp"
        android:layout_height="25dp"
        android:layout_marginTop="48dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/textView_miercoles"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_viernes"
        android:layout_width="92dp"
        android:layout_height="26dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/textView_viernes"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_lugar_encuentro"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="108dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/textView_lugar_encuentro"
        android:textColor="@color/teal_700"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.608"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_ubicacion"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/textView_ubicacion"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.825"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>