<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailedActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailName"
        android:layout_marginTop="14dp"
        android:text="alumno"
        android:textSize="24sp"
        android:textColor="@color/verdeP"
        android:textStyle="bold"
        android:layout_gravity="center" />

        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="200dp"
            android:id="@+id/cardImage"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <ImageView
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:id="@+id/detailImage"
                android:layout_gravity="center"
                android:src="@drawable/florrueda"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="Datos Personales:"
        android:textColor="@color/verdeP"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/detailDatos"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/datosFlorRueda"
        android:textColor="@color/lavanda"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="tiempos"
        android:textColor="@color/verdeP"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tiemposFlorRueda"
        android:textColor="@color/lavanda"
        android:textSize="15sp"
        android:textStyle="bold"
        android:id="@+id/detailTiempos" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="carreras"
        android:textColor="@color/verdeP"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/carrerasFlor"
        android:textColor="@color/lavanda"
        android:textSize="15sp"
        android:textStyle="bold"
        android:id="@+id/detailCarreras" />





</LinearLayout>